# Trend-Hunter-App-with-CrewAI

./: README.md  pyproject.toml  trend_report.md
db/: chroma.sqlite3
src/trend_hunter_crewai/: app_ui.py  crew.py  llm_config.py  main.py
src/trend_hunter_crewai/config/: agents.yaml  tasks.yaml
