[project]
name = "trend_hunter_crewai"
version = "0.1.0"
description = "Trend-Hunter-CrewAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
trend_hunter_crewai = "trend_hunter_crewai.main:run"
run_crew = "trend_hunter_crewai.main:run"
train = "trend_hunter_crewai.main:train"
replay = "trend_hunter_crewai.main:replay"
test = "trend_hunter_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
